--- a/Robotics Scouting Server/results_template.html
+++ b/Robotics Scouting Server/results_template.html
@@ -52,10 +52,7 @@
 			<div id = "content">
 				<table>
 					<tr class = "headings">
-						<td><$QUERY_1></td>
-						<td><$QUERY_2></td>
-						<td><$QUERY_3></td>
-						<td><$QUERY_4></td>
+						<$HEADERS>
 					</tr>
 					<$DATA>
 				</table>
